# HesaiLidarSDK

debian/: README  README.Debian  README.source  changelog  control  copyright  hesailidarsdk.cron.d.ex  hesailidarsdk.default.ex  hesailidarsdk.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex
sample/simple40/: CMakeLists.txt  simple40.cc
